--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -5,7 +5,13 @@
 {% block content %}
 
 <h1>{{post.title}}</h1><br/>
-<small>By : {{post.author}} - {{post.date}} - <a href="{% url 'post-update' post.pk%}">(Edit)</a> | <a href="{% url 'post-delete' post.pk%}">(Delete)</a></small>
+<small>By : {{post.author}} - {{post.date}} {% if user.is_authenticated %}
+
+	- <a href="{% url 'post-update' post.pk%}">(Edit)</a> | <a href="{% url 'post-delete' post.pk%}">(Delete)</a>
+
+	{% endif %}
+
+</small>
 <hr/><br/>
 {{post.text}}
 <br/><br/><br/>
