--- a/templates/home.html
+++ b/templates/home.html
@@ -5,11 +5,13 @@
 {% for post in object_list%}
 <ul>
 	<li>
-		<a href="{% url 'post-detail' post.pk %}">{{post.title}}</a> By : {{post.author.first_name}}{{post.author.last_name}} - {{post.date}} - <small><a href="{% url 'post-update' post.pk%}">(Edit)</a>
+		<a href="{% url 'post-detail' post.pk %}">{{post.title}}</a> By : {{post.author.first_name}}{{post.author.last_name}} - {{post.date}} {% if user.is_authenticated%}
+		- <small><a href="{% url 'post-update' post.pk%}">(Edit)</a>
 			|
 		<a href="{% url 'post-delete' post.pk%}">(Delete)</a>
 
 		</small>
+		{% endif%}
 		<br/>
 		{{post.text}}
 	</li>
