--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,7 @@
 {% for post in object_list%}
 <ul>
 	<li>
-		<a href="{% url 'post-detail' post.pk %}">{{post.title}}</a> By : {{post.author.first_name}}{{post.author.last_name}} - {{post.date}} {% if user.is_authenticated%}
+		<a href="{% url 'post-detail' post.pk %}">{{post.title}}</a> By : {{post.author.first_name}}{{post.author.last_name}} - <a href="{% url 'category' post.category%}">{{post.category}}</a> - {{post.date}} {% if user.is_authenticated%}
 		- <small><a href="{% url 'post-update' post.pk%}">(Edit)</a>
 			|
 		<a href="{% url 'post-delete' post.pk%}">(Delete)</a>
