--- a/templates/base.html
+++ b/templates/base.html
@@ -19,6 +19,26 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <!-- category menu codes -->
+        {% if cat_menu %}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Categories
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+
+            {% for item in cat_menu%}
+            <a class="dropdown-item" href="{% url 'category' item|slugify%}">{{item}}</a>
+            {% endfor %}
+          </ul>
+        </li>
+        {% else %}
+        
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'category-list'%}">Categories</a>
+          </li>
+        {% endif %}
+
         {% if user.is_authenticated%}
           <li class="nav-item">
             <a class="nav-link" href="{% url 'add-post'%}">Add Post</a>
@@ -36,15 +56,6 @@
             <a class="nav-link" href="{% url 'login'%}">Login</a>
           </li>
         {% endif %}
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
           </ul>
         </li>
       </ul>
