--- a/templates/delete_post.html
+++ b/templates/delete_post.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 {% if user.is_authenticated %}
+ {% if user.id == post.author.id %}
 
 <h1>Delete post...</h1>
 <br/><br/>
@@ -14,6 +15,11 @@
 	<strong>Are you sure you want to delete "{{ post.title }}"?!<br/><br/>
 	<button class="btn btn-danger">Delete</button>
 </form>
+{% else %}
+ <div class="alert alert-danger" role="alert">
+	  	You are not allowed to delete this post!!!
+	</div>
+{% endif %}
 
 {% else %}
 	<div class="alert alert-danger" role="alert">
