--- a/templates/home.html
+++ b/templates/home.html
@@ -5,10 +5,13 @@
 {% for post in object_list%}
 <ul>
 	<li>
-		<a href="{% url 'post-detail' post.pk %}">{{post.title}}</a> By : {{post.author.first_name}}{{post.author.last_name}} - <a href="{% url 'category' post.category%}">{{post.category}}</a> - {{post.date}} {% if user.is_authenticated%}
+		<a href="{% url 'post-detail' post.pk %}">{{post.title}}</a> By : {{post.author.first_name}} {{post.author.last_name}} - <a href="{% url 'category' post.category%}">{{post.category|slugify}}</a> - {{post.date}} {% if user.is_authenticated%}
+		{% if user.id == post.author.id %}
 		- <small><a href="{% url 'post-update' post.pk%}">(Edit)</a>
 			|
 		<a href="{% url 'post-delete' post.pk%}">(Delete)</a>
+
+		{% endif %}
 
 		</small>
 		{% endif%}
