--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -6,8 +6,11 @@
 
 <h1>{{post.title}}</h1><br/>
 <small>By : {{post.author}} - {{post.date}} {% if user.is_authenticated %}
+	{% if user.id == post.author.id %}
 
 	- <a href="{% url 'post-update' post.pk%}">(Edit)</a> | <a href="{% url 'post-delete' post.pk%}">(Delete)</a>
+
+	{% endif %}
 
 	{% endif %}
 
@@ -16,5 +19,10 @@
 {{post.text}}
 <br/><br/><br/>
 <a href="{% url 'home' %}" class = 'btn btn-secondary'>Back</a>
+<br/><hr><br/>
+<form method="POST", action="{% url 'like_post' post.pk%}">
+	{% csrf_token %}
+	<button type="submit", name="post_id" value="{{ post.id }}" class="btn btn-outline-primary btn-sm">Like</button> - {{ total_likes }} Likes
+</form>
 
 {% endblock%}
