--- a/templates/update_post.html
+++ b/templates/update_post.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 {% if user.is_authenticated %}
+ {% if user.id == post.author.id %}
 
 <h1>Update post...</h1>
 <br/><br/>
@@ -14,6 +15,13 @@
 
 	<button class="btn btn-outline-primary">Update</button>
 </form>
+{% else %}
+
+<div class="alert alert-danger" role="alert">
+  You are not allowed to update this post!!!
+</div>
+
+{% endif %}
 
 {% else %}
 <div class="alert alert-danger" role="alert">
