--- a/templates/add_post.html
+++ b/templates/add_post.html
@@ -10,6 +10,7 @@
 <br/><br/>
 <form method="POST">
 	{% csrf_token %}
+	{{form.media}}
 	{{form.as_p}}
 
 	<button class="btn btn-outline-success">Post</button>
