--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -16,7 +16,7 @@
 
 </small>
 <hr/><br/>
-{{post.text}}
+{{post.text|safe}}
 <br/><br/><br/>
 <a href="{% url 'home' %}" class = 'btn btn-secondary'>Back</a>
 <br/><hr><br/>
